--- a/style.css
+++ b/style.css
@@ -118,21 +118,41 @@ Version: 1.0.0
 #site-logo {
     -ms-flex-order: 1;
     order: 1;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
 }
 #site-navigation-wrap {
     -ms-flex-order: 2;
     order: 2;
     padding: 0 20px;
+    -ms-flex: 0 0 58%;
+    flex: 0 0 58%;
+    max-width: 58%;
 }
 .oceanwp-social-menu.simple-social {
     -ms-flex-order: 3;
     order: 3;
     right: 0;
     padding: 0 20px;
+    -ms-flex: 0 0 12%;
+    flex: 0 0 12%;
+    max-width: 12%;
 }
 .switch-cnt {
     -ms-flex-order: 4;
     order: 4;
+    -ms-flex: 0 0 10%;
+    flex: 0 0 10%;
+    max-width: 10%;
+}
+.switch-text {
+    font-size: 11px;
+    color: #fff;
+    line-height: 1.4em;
+    position: absolute;
+    transform: translate(27px, 4px);
+    width: 63px;
 }
 
 /* Header */
@@ -576,7 +596,7 @@ h2.member-name {
     position: relative;
     /* margin-top: 27px; */
     color: #000;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 800;
     /* white-space: nowrap; */
     text-align: left;
@@ -586,7 +606,7 @@ h2.member-name {
 h3.member-title {
     margin-top: 5px;
     color: #d0ad6a;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     /* height: 60px; */
     text-transform: capitalize;
@@ -594,7 +614,7 @@ h3.member-title {
 p.member-desc {
     margin-top: 5px;
     color: #000000;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
 }
 .meber-cat-wrap {
