--- a/style.css
+++ b/style.css
@@ -708,7 +708,6 @@ body.dark-mode p.member-desc a{
     margin: 0;
 }
 #members-cnt-9, #members-cnt-12 {
-    background: #F4F4F4;
     padding: 30px 0;
 }
 
@@ -857,6 +856,12 @@ body.light-mode #memeberDescription {
 }
 body.dark-mode #memeberDescription {
     color: #ffffff;
+}
+body.light-mode #members-cnt-9, body.light-mode #members-cnt-12 {
+    background: #F4F4F4;
+}
+body.dark-mode #members-cnt-9, body.dark-mode #members-cnt-12 {
+    background: #000000;
 }
 
 
