--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ body.dark-mode #blog-entries .blog-entry:nth-child(even){
     font-size: 16px;
     font-weight: 400;
     border: 1px solid #FF0000;
-    padding: 8px 40px;
+    /* padding: 8px 40px; */
     width: 160px;
     text-align: center;
     display: inline-block;
@@ -1717,7 +1717,7 @@ body.dark-mode .dark-c-whi{
 
 .blog-entry-readmore a span {
     display: block;
-    /* padding: 14px 30px; */
+    padding: 11px 30px;
     text-transform: uppercase;
     font-family: poppins;
 }
@@ -1745,7 +1745,7 @@ body.dark-mode .dark-c-whi{
 }
 .blog-entry-readmore a span::before {
     left: -1px;
-    top: 0;
+    top: -1px;
 }
 
 .blog-entry-readmore a:hover::before, .blog-entry-readmore a:hover::after {
@@ -1753,7 +1753,7 @@ body.dark-mode .dark-c-whi{
 }
 
 .blog-entry-readmore a:hover span::before, .blog-entry-readmore a:hover span::after {
-    height: 100%;
+    height: 46px;
 }
 
 .blog-entry-readmore a::after {
@@ -1765,7 +1765,7 @@ body.dark-mode .dark-c-whi{
 .blog-entry-readmore a span::after {
     transition-delay: 0.4s;
     right: -1px;
-    bottom: 0;
+    bottom: -1px;
 }
 
 .blog-entry-readmore a::before {
@@ -1818,7 +1818,7 @@ body.dark-mode .dark-c-whi{
 }
 #menu-item-41 a span {
     display: block !important;
-    padding: 14px 20px !important;
+    padding: 14px 17px !important;
     text-transform: uppercase !important;
     font-family: poppins !important;
 }
