--- a/style.css
+++ b/style.css
@@ -1621,20 +1621,23 @@ body.dark-mode .dark-c-whi{
     margin: 20px 0;
     background: transparent;
     border: 1px solid #FF0000;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    -o-border-radius: 0px;
 }
 #footFsubmit{
     padding: 0;
     font-weight: inherit;
 }
-
+#footFsubmit{
+    line-height: inherit;
+    letter-spacing: inherit;
+}
 .my-btn span {
     display: block;
-    padding: 14px 30px;
+    padding: 11px 30px;
     text-transform: uppercase;
     font-family: poppins;
 }
@@ -1666,7 +1669,7 @@ body.dark-mode .dark-c-whi{
 }
 
 .my-btn:hover span::before, .my-btn:hover span::after {
-    height: 100%;
+    height: 48px;
 }
 
 .my-btn::after {
@@ -1678,7 +1681,7 @@ body.dark-mode .dark-c-whi{
 .my-btn span::after {
     transition-delay: 0.4s;
     right: -1px;
-    bottom: 0;
+    bottom: -1px;
 }
 
 .my-btn::before {
@@ -1690,7 +1693,7 @@ body.dark-mode .dark-c-whi{
 .my-btn span::before {
     transition-delay: 0s;
     left: -1px;
-    top: 0;
+    top: -1px;
 }
 
 .my-btn:hover::after {
@@ -1810,11 +1813,11 @@ body.dark-mode .dark-c-whi{
     line-height: 1 !important;
     background: transparent !important;
     border: 1px solid #FF0000 !important;
-    border-radius: 2px !important;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
+    border-radius: 0px !important;
+    -webkit-border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    -ms-border-radius: 0px !important;
+    -o-border-radius: 0px !important;
 }
 #menu-item-41 a span {
     display: block !important;
@@ -1849,7 +1852,7 @@ body.dark-mode .dark-c-whi{
 }
 
 #menu-item-41 a:hover span::before, #menu-item-41 a:hover span::after {
-    height: 100% !important;
+    height: 46px !important;
 }
 
 #menu-item-41 a::after {
@@ -1862,7 +1865,7 @@ body.dark-mode .dark-c-whi{
     transition-delay: 0.4s !important;
     left: unset !important;
     right: -1px !important;
-    bottom: 0 !important;
+    bottom: -1px !important;
     display: block !important;
 }
 
@@ -1875,7 +1878,7 @@ body.dark-mode .dark-c-whi{
 #menu-item-41 a span::before {
     transition-delay: 0s !important;
     left: -1px !important;
-    top: 0 !important;
+    top: -1px !important;
 }
 
 #menu-item-41 a:hover::after {
@@ -1895,6 +1898,9 @@ body.dark-mode .dark-c-whi{
 }
 
 /* BTN NAV */
+#footFsubmit span:hover::before, #footFsubmit span:hover::after{
+    height: 46px;
+}
 /* 3d Effect */
 
 .layer-4 {
